--- a/demos/basics/colors.ipynb
+++ b/demos/basics/colors.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f240401d460>]"
+       "[<matplotlib.lines.Line2D at 0x7fdccc298a90>]"
       ]
      },
      "execution_count": 4,
