--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -205,7 +205,7 @@
     "# Do not edit manually. Instead, edit the script and run it again.\n",
     "\n",
     "from ._core import Device\n",
-    "from ._array import Image, _Array\n",
+    "from ._array import Image\n",
     "from ._decorators import plugin_function\n",
     "\n",
     "{python_functions}\n",
