update auto generation

--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CLIc repository from where to parse the code\n",
-    "tier = 3\n",
+    "tier = 5\n",
     "file = 'clic/include/tier' + str(tier) + '.hpp'\n",
     "repo = 'https://github.com/clEsperanto/CLIc_prototype.git'\n",
-    "branch = 'add-cuda-backend'"
+    "branch = 'master'"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,10 @@
     "        {param_bindings}\n",
     "    )\n",
     "\"\"\"\n",
-    "    return_type = return_type.replace('::Pointer', '').replace('Array', 'Image')\n",
+    "    if return_type.find('std::array') != 1 or return_type.find('std::vector') != 1:\n",
+    "        return_type = 'list'\n",
+    "    else:\n",
+    "        return_type = return_type.replace('::Pointer', '').replace('Array', 'Image')\n",
     "    function_name = function_name.replace('_func', '')\n",
     "    parameter_binding_list = []\n",
     "    parameter_defines_list = []\n",
@@ -161,12 +164,15 @@
     "        name = param_name.replace('src', 'input_image').replace('dst', 'output_image')\n",
     "        type_declare = param_type.replace('::Pointer', '').replace('Array', 'Image')\n",
     "        default_value = ' = None'\n",
-    "        if param_name.find('src') != -1:\n",
+    "        if param_name.find('src') != -1 or param_name.find('mask') != -1:\n",
     "            default_value = ''\n",
     "        if param_type in ['float', 'int']:\n",
     "            default_value = ' = 0'\n",
     "        if param_type in ['bool']:\n",
     "            default_value = ' = True'\n",
+    "        if param_type in ['std::string']:\n",
+    "            default_value = ' = \"\"'\n",
+    "            type_declare = 'str'\n",
     "        parameter_defines_list.append(f'{name}: {type_declare}{default_value}')\n",
     "\n",
     "    parameter_defines = \",\\n\\t\".join(\n",
@@ -225,17 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flag_existing_labels_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
-      "gamma_correction_func {'parameter_names': ['device', 'src', 'dst', 'gamma'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
-      "histogram_func {'parameter_names': ['device', 'src', 'dst', 'nbins', 'min', 'max'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int', 'float', 'float'], 'default_values': ['std::numeric_limits<float>::quiet_NaN(', 'std::numeric_limits<float>::quiet_NaN('], 'return_type': 'Array::Pointer'}\n",
-      "mean_of_all_pixels_func {'parameter_names': ['device', 'src'], 'parameter_types': ['Device::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'float'}\n"
+      "combine_labels_func {'parameter_names': ['device', 'src0', 'src1', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
+      "connected_components_labeling_func {'parameter_names': ['device', 'src', 'dst', 'connectivity'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'std::string'], 'default_values': [], 'return_type': 'Array::Pointer'}\n"
      ]
     }
    ],
@@ -263,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the path to the current directory\n",
     "current_dir = os.path.dirname(os.path.abspath(__file__))\n",
-    "cpp_file = os.path.join(current_dir, '..', 'wrapper', 'tier' + str(tier) + '_.cpp')\n",
+    "cpp_file = os.path.join(current_dir, '..', 'src', 'wrapper', 'tier' + str(tier) + '_.cpp')\n",
     "py_file = os.path.join(current_dir, '..', 'pyclesperanto', '_tier' + str(tier) + '.py')\n",
     "\n",
     "# if the file already exists, rename it to cleTierX_old.cpp\n",
@@ -299,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
