fix: return type logic

--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CLIc repository from where to parse the code\n",
-    "tier = 5\n",
+    "tier = 4\n",
     "file = 'clic/include/tier' + str(tier) + '.hpp'\n",
     "repo = 'https://github.com/clEsperanto/CLIc_prototype.git'\n",
-    "branch = 'master'"
+    "branch = 'prep_v0.8'"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,10 +143,11 @@
     "        {param_bindings}\n",
     "    )\n",
     "\"\"\"\n",
-    "    if return_type.find('std::array') != 1 or return_type.find('std::vector') != 1:\n",
+    "    if 'std::array' in return_type or 'std::vector' in return_type:\n",
     "        return_type = 'list'\n",
-    "    else:\n",
+    "    elif 'Array::Pointer' in return_type:\n",
     "        return_type = return_type.replace('::Pointer', '').replace('Array', 'Image')\n",
+    "\n",
     "    function_name = function_name.replace('_func', '')\n",
     "    parameter_binding_list = []\n",
     "    parameter_defines_list = []\n",
@@ -231,15 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "combine_labels_func {'parameter_names': ['device', 'src0', 'src1', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
-      "connected_components_labeling_func {'parameter_names': ['device', 'src', 'dst', 'connectivity'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'std::string'], 'default_values': [], 'return_type': 'Array::Pointer'}\n"
+      "mean_squared_error_func {'parameter_names': ['device', 'src0', 'src1'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'float'}\n",
+      "spots_to_pointlist_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
+      "relabel_sequential_func {'parameter_names': ['device', 'src', 'dst', 'blocksize'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
+      "threshold_otsu_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'Array::Pointer'}\n"
      ]
     }
    ],
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
