update basic demo for live test

--- a/demos/basics/browse_operations.ipynb
+++ b/demos/basics/browse_operations.ipynb
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "174"
+       "213"
       ]
      },
      "execution_count": 3,
@@ -76,14 +76,18 @@
     {
      "data": {
       "text/plain": [
-       "['Device',\n",
+       "['Array',\n",
+       " 'Device',\n",
        " 'Image',\n",
+       " 'Union',\n",
        " 'absolute',\n",
        " 'absolute_difference',\n",
        " 'add_image_and_scalar',\n",
        " 'add_images',\n",
        " 'add_images_weighted',\n",
+       " 'array_equal',\n",
        " 'asarray',\n",
+       " 'available_device_names',\n",
        " 'binary_and',\n",
        " 'binary_edge_detection',\n",
        " 'binary_not',\n",
@@ -93,22 +97,29 @@
        " 'block_enumerate',\n",
        " 'bottom_hat_box',\n",
        " 'bottom_hat_sphere',\n",
+       " 'bounding_box',\n",
+       " 'cbrt',\n",
+       " 'center_of_mass',\n",
+       " 'cl_info',\n",
        " 'clip',\n",
        " 'closing_box',\n",
+       " 'closing_labels',\n",
        " 'closing_sphere',\n",
-       " 'combine_horizontally',\n",
        " 'combine_labels',\n",
-       " 'combine_vertically',\n",
-       " 'concatenate_stacks',\n",
-       " 'connected_components_labeling_box',\n",
+       " 'concatenate_along_x',\n",
+       " 'concatenate_along_y',\n",
+       " 'concatenate_along_z',\n",
+       " 'connected_components_labeling',\n",
        " 'convolve',\n",
        " 'copy',\n",
        " 'copy_horizontal_slice',\n",
        " 'copy_slice',\n",
        " 'copy_vertical_slice',\n",
+       " 'count_touching_neighbors',\n",
        " 'create',\n",
        " 'create_like',\n",
        " 'crop',\n",
+       " 'crop_border',\n",
        " 'cubic_root',\n",
        " 'default_initialisation',\n",
        " 'degrees_to_radians',\n",
@@ -117,21 +128,30 @@
        " 'detect_minima_box',\n",
        " 'difference_of_gaussian',\n",
        " 'dilate_box',\n",
+       " 'dilate_labels',\n",
        " 'dilate_sphere',\n",
+       " 'divide_by_gaussian_background',\n",
        " 'divide_image_and_scalar',\n",
        " 'divide_images',\n",
        " 'equal',\n",
        " 'equal_constant',\n",
        " 'erode_box',\n",
+       " 'erode_labels',\n",
        " 'erode_sphere',\n",
+       " 'exclude_labels',\n",
        " 'exclude_labels_on_edges',\n",
        " 'exponential',\n",
        " 'extend_labeling_via_voronoi',\n",
+       " 'fabs',\n",
        " 'flag_existing_labels',\n",
        " 'flip',\n",
        " 'gamma_correction',\n",
        " 'gaussian_blur',\n",
+       " 'generate_binary_overlap_matrix',\n",
+       " 'generate_distance_matrix',\n",
+       " 'generate_touch_matrix',\n",
        " 'get_device',\n",
+       " 'gpu_info',\n",
        " 'gradient_x',\n",
        " 'gradient_y',\n",
        " 'gradient_z',\n",
@@ -139,16 +159,22 @@
        " 'greater_constant',\n",
        " 'greater_or_equal',\n",
        " 'greater_or_equal_constant',\n",
+       " 'hessian_eigenvalues',\n",
        " 'histogram',\n",
        " 'imshow',\n",
        " 'invert',\n",
        " 'is_image',\n",
+       " 'jaccard_index',\n",
+       " 'label',\n",
        " 'label_spots',\n",
+       " 'labelled_spots_to_pointlist',\n",
        " 'laplace_box',\n",
        " 'laplace_diamond',\n",
+       " 'large_hessian_eigenvalue',\n",
        " 'list_available_backends',\n",
        " 'list_available_devices',\n",
        " 'list_operations',\n",
+       " 'local_cross_correlation',\n",
        " 'logarithm',\n",
        " 'mask',\n",
        " 'mask_label',\n",
@@ -174,13 +200,17 @@
        " 'minimum_image_and_scalar',\n",
        " 'minimum_images',\n",
        " 'minimum_of_all_pixels',\n",
+       " 'minimum_of_masked_pixels',\n",
+       " 'minimum_of_masked_pixels_reduction',\n",
        " 'minimum_sphere',\n",
        " 'minimum_x_projection',\n",
        " 'minimum_y_projection',\n",
        " 'minimum_z_projection',\n",
+       " 'mod',\n",
        " 'mode_box',\n",
        " 'mode_sphere',\n",
        " 'modulo_images',\n",
+       " 'multiply_image_and_coordinate',\n",
        " 'multiply_image_and_scalar',\n",
        " 'multiply_images',\n",
        " 'multiply_matrix',\n",
@@ -194,6 +224,7 @@
        " 'onlyzero_overwrite_maximum_box',\n",
        " 'onlyzero_overwrite_maximum_diamond',\n",
        " 'opening_box',\n",
+       " 'opening_labels',\n",
        " 'opening_sphere',\n",
        " 'paste',\n",
        " 'plugin_function',\n",
@@ -203,11 +234,11 @@
        " 'push',\n",
        " 'radians_to_degrees',\n",
        " 'range',\n",
-       " 'read_intensities_from_positions',\n",
+       " 'read_values_from_coordinates',\n",
        " 'reciprocal',\n",
        " 'relabel_sequential',\n",
-       " 'replace_intensities',\n",
-       " 'replace_intensity',\n",
+       " 'replace_value',\n",
+       " 'replace_values',\n",
        " 'select_backend',\n",
        " 'select_device',\n",
        " 'set',\n",
@@ -219,18 +250,25 @@
        " 'set_ramp_y',\n",
        " 'set_ramp_z',\n",
        " 'set_row',\n",
+       " 'set_wait_for_kernel_to_finish',\n",
        " 'set_where_x_equals_y',\n",
        " 'set_where_x_greater_than_y',\n",
        " 'set_where_x_smaller_than_y',\n",
        " 'sign',\n",
+       " 'small_hessian_eigenvalue',\n",
        " 'smaller',\n",
        " 'smaller_constant',\n",
        " 'smaller_or_equal',\n",
        " 'smaller_or_equal_constant',\n",
        " 'sobel',\n",
+       " 'sqrt',\n",
        " 'square',\n",
        " 'square_root',\n",
        " 'squared_difference',\n",
+       " 'standard_deviation_box',\n",
+       " 'standard_deviation_sphere',\n",
+       " 'std_z_projection',\n",
+       " 'subtract_gaussian_background',\n",
        " 'subtract_image_from_scalar',\n",
        " 'subtract_images',\n",
        " 'sum_of_all_pixels',\n",
@@ -249,7 +287,8 @@
        " 'variance_sphere',\n",
        " 'voronoi_labeling',\n",
        " 'voronoi_otsu_labeling',\n",
-       " 'write_values_to_positions']"
+       " 'wait_for_kernel_to_finish',\n",
+       " 'write_values_to_coordinates']"
       ]
      },
      "execution_count": 4,
@@ -277,7 +316,7 @@
        "\u001b[0;34m\u001b[0m    \u001b[0mdevice\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Device\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Array\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mDocstring:\u001b[0m <no docstring>\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/Libraries/miniconda3/envs/build38/lib/python3.8/site-packages/pyclesperanto/_tier1.py\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/Libraries/miniconda3/envs/build8/lib/python3.11/site-packages/pyclesperanto/_tier1.py\n",
        "\u001b[0;31mType:\u001b[0m      function"
       ]
      },
@@ -314,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
