--- a/demos/basics/multiply_vectors_and_matrices.ipynb
+++ b/demos/basics/multiply_vectors_and_matrices.ipynb
@@ -137,6 +137,13 @@
       " [0 1 0 0]\n",
       " [4 5 3 1]]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "4 warnings generated.\n"
+     ]
     }
    ],
    "source": [
@@ -164,6 +171,13 @@
       "[[0.2]\n",
       " [0. ]\n",
       " [4.5]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "4 warnings generated.\n"
      ]
     }
    ],
@@ -197,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
