--- a/demos/basics/nonzero.ipynb
+++ b/demos/basics/nonzero.ipynb
@@ -31,8 +31,8 @@
        "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
        "\tType: GPU\n",
        "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8366 MB\n",
-       "\tMaximum Object Size: 2091 MB"
+       "\tGlobal Memory Size: 8358 MB\n",
+       "\tMaximum Object Size: 2089 MB"
       ]
      },
      "execution_count": 1,
@@ -129,15 +129,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pyclesperanto' has no attribute 'spots_to_pointlist'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mspots_to_pointlist\u001b[49m(cl_label_image)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'spots_to_pointlist'"
-     ]
+     "data": {
+      "text/html": [
+       "<pre>array([[0, 3, 2, 1],\n",
+       "       [0, 0, 1, 2]], dtype=uint32, mtype=buffer)</pre>"
+      ],
+      "text/plain": [
+       "array([[0, 3, 2, 1],\n",
+       "       [0, 0, 1, 2]], dtype=uint32, mtype=buffer)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -146,12 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e4687058",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>array([[0, 0, 1, 2],\n",
+       "       [0, 3, 2, 1]], dtype=uint32, mtype=buffer)</pre>"
+      ],
+      "text/plain": [
+       "array([[0, 0, 1, 2],\n",
+       "       [0, 3, 2, 1]], dtype=uint32, mtype=buffer)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cle.flip(cle.spots_to_pointlist(cl_label_image), flip_x=True)"
+    "cle.flip(cle.spots_to_pointlist(cl_label_image), flip_x = False, flip_y=True)"
    ]
   },
   {
@@ -164,10 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5972b918",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 0 0 1]\n",
+      "  [0 0 1 0]\n",
+      "  [0 1 0 0]]\n",
+      "\n",
+      " [[0 0 0 0]\n",
+      "  [0 1 0 0]\n",
+      "  [0 0 0 0]]]\n"
+     ]
+    }
+   ],
    "source": [
     "label_image = np.asarray([[\n",
     "        [1,0,0,1],\n",
@@ -183,20 +217,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a72c1367",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 0, 0, 0, 1]), array([0, 0, 1, 2, 1]), array([0, 3, 2, 1, 1]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "label_image.nonzero()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a2adadbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 0 0 1]\n",
+      "  [0 0 1 0]\n",
+      "  [0 1 0 0]]\n",
+      "\n",
+      " [[0 0 0 0]\n",
+      "  [0 1 0 0]\n",
+      "  [0 0 0 0]]]\n"
+     ]
+    }
+   ],
    "source": [
     "cl_label_image = cle.push(label_image)\n",
     "print(cl_label_image)"
@@ -204,22 +263,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0c9f690a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>array([[0, 3, 2, 1, 1],\n",
+       "       [0, 0, 1, 2, 1],\n",
+       "       [0, 0, 0, 0, 1]], dtype=uint32, mtype=buffer)</pre>"
+      ],
+      "text/plain": [
+       "array([[0, 3, 2, 1, 1],\n",
+       "       [0, 0, 1, 2, 1],\n",
+       "       [0, 0, 0, 0, 1]], dtype=uint32, mtype=buffer)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cle.spots_to_pointlist(cl_label_image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "799f4e4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>array([[0, 0, 0, 0, 1],\n",
+       "       [0, 0, 1, 2, 1],\n",
+       "       [0, 3, 2, 1, 1]], dtype=uint32, mtype=buffer)</pre>"
+      ],
+      "text/plain": [
+       "array([[0, 0, 0, 0, 1],\n",
+       "       [0, 0, 1, 2, 1],\n",
+       "       [0, 3, 2, 1, 1]], dtype=uint32, mtype=buffer)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cle.flip(cle.spots_to_pointlist(cl_label_image), flip_x=False)"
+    "cle.flip(cle.spots_to_pointlist(cl_label_image), flip_x = False, flip_y=True)"
    ]
   },
   {
@@ -247,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
