--- a/demos/basics/test_max_position.ipynb
+++ b/demos/basics/test_max_position.ipynb
@@ -34,18 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 48, 0)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'pyclesperanto' has no attribute 'maximum_position'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(ndi\u001b[38;5;241m.\u001b[39mmaximum_position(array3d))\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmaximum_position\u001b[49m(array3d))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'maximum_position'"
+      "(10, 48, 0)\n",
+      "[0, 6, 11]\n"
      ]
     }
    ],
@@ -56,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f577db23-9530-4a24-b3f3-463ec4bc84ba",
    "metadata": {},
    "outputs": [],
@@ -68,10 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0ca92364-832f-412d-885c-3f4778c7203b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(89, 2)\n",
+      "[2, 89, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "print(ndi.maximum_position(array2d))\n",
     "print(cle.maximum_position(array2d))"
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f68acd41-2ee1-4700-a4e2-be921eff31f2",
    "metadata": {},
    "outputs": [],
@@ -91,10 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "42e0a94f-497a-4efd-8fd3-0fa947c352ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20,)\n",
+      "[20, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "print(ndi.maximum_position(array1d))\n",
     "print(cle.maximum_position(array1d))"
@@ -102,10 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "baba9ca4-1c35-410b-86bc-ddb7650add1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30 50 20]\n",
+      "[1000   20    1]\n",
+      "[10, 20979]\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.random.randint(0, 10, (30, 50, 20))\n",
     "array[20, 48, 19] = 10\n",
@@ -127,20 +145,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "87d554c1-a0d4-46c1-adbe-5603c21f8937",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 8, 3)\n",
+      "[[[3 6 2]\n",
+      "  [5 5 0]\n",
+      "  [5 3 2]\n",
+      "  [7 0 7]\n",
+      "  [9 2 9]\n",
+      "  [6 2 4]\n",
+      "  [9 1 0]\n",
+      "  [9 2 1]]\n",
+      "\n",
+      " [[2 7 6]\n",
+      "  [6 4 3]\n",
+      "  [3 6 1]\n",
+      "  [6 5 6]\n",
+      "  [8 2 5]\n",
+      "  [5 0 5]\n",
+      "  [9 4 5]\n",
+      "  [8 4 9]]\n",
+      "\n",
+      " [[2 6 5]\n",
+      "  [8 4 1]\n",
+      "  [8 8 3]\n",
+      "  [2 4 6]\n",
+      "  [8 4 1]\n",
+      "  [9 6 1]\n",
+      "  [3 7 5]\n",
+      "  [8 1 7]]\n",
+      "\n",
+      " [[9 7 2]\n",
+      "  [8 8 6]\n",
+      "  [6 3 2]\n",
+      "  [1 1 5]\n",
+      "  [0 4 2]\n",
+      "  [2 7 5]\n",
+      "  [4 5 0]\n",
+      "  [7 9 5]]\n",
+      "\n",
+      " [[9 3 2]\n",
+      "  [6 4 6]\n",
+      "  [2 4 7]\n",
+      "  [0 4 1]\n",
+      "  [5 2 8]\n",
+      "  [0 5 7]\n",
+      "  [1 0 2]\n",
+      "  [4 5 1]]]\n",
+      "[[9. 7. 6.]\n",
+      " [8. 8. 6.]\n",
+      " [8. 8. 7.]\n",
+      " [7. 5. 7.]\n",
+      " [9. 4. 9.]\n",
+      " [9. 7. 7.]\n",
+      " [9. 7. 5.]\n",
+      " [9. 9. 9.]]\n",
+      "[[9. 6. 9.]\n",
+      " [9. 7. 9.]\n",
+      " [9. 8. 7.]\n",
+      " [9. 9. 6.]\n",
+      " [9. 5. 8.]\n",
+      " [9. 5. 8.]\n",
+      " [9. 5. 8.]\n",
+      " [9. 5. 8.]]\n",
+      "[[6. 7. 6.]\n",
+      " [5. 6. 8.]\n",
+      " [5. 6. 8.]\n",
+      " [7. 6. 6.]\n",
+      " [9. 8. 8.]\n",
+      " [6. 5. 9.]\n",
+      " [9. 9. 7.]\n",
+      " [9. 9. 8.]]\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.random.randint(0, 10, (5, 8, 3))\n",
     "dimensionality = array.shape\n",
     "print(dimensionality)\n",
     "print(array)\n",
     "temp_max = cle.create([1, dimensionality[1], dimensionality[0]])\n",
-    "pos_x = cle.create([1, dimensionality[1], dimensionality[0]])\n",
+    "pos_z = cle.create([1, dimensionality[1], dimensionality[0]])\n",
     "\n",
-    "temp_max = cle.maximum_x_projection(array)\n",
-    "cle.x_position_of_maximum_x_projection(array, pos_x)\n",
+    "temp_max = cle.maximum_z_projection(array)\n",
+    "cle.z_position_of_maximum_z_projection(array, pos_z)\n",
     "print(temp_max)\n",
     "\n",
     "source = temp_max\n",
@@ -150,18 +244,43 @@
     "print(temp_max)\n",
     "\n",
     "source = temp_max\n",
-    "pos_z = cle.create([1, 1, 1])\n",
-    "temp_max = cle.maximum_z_projection(array, temp_max)\n",
-    "cle.z_position_of_maximum_z_projection(array, pos_z)\n",
+    "pos_x = cle.create([1, 1, 1])\n",
+    "temp_max = cle.maximum_x_projection(array, temp_max)\n",
+    "cle.x_position_of_maximum_x_projection(array, pos_z)\n",
     "print(temp_max)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5bd99c52-a7a6-4dd9-abd3-4a5d4d5b28b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 6 4 7 1 8 0 4]\n",
+      " [5 7 8 0 1 2 9 2]\n",
+      " [6 5 0 7 0 5 0 5]\n",
+      " [0 5 3 7 1 4 2 4]\n",
+      " [3 4 0 9 0 3 5 4]\n",
+      " [8 1 9 7 7 5 9 1]]\n",
+      "[[8.]\n",
+      " [9.]\n",
+      " [7.]\n",
+      " [7.]\n",
+      " [9.]\n",
+      " [9.]]\n",
+      "[[8.]\n",
+      " [9.]\n",
+      " [7.]\n",
+      " [7.]\n",
+      " [9.]\n",
+      " [9.]]\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.random.randint(0, 10, (6, 8))\n",
     "dimensionality = array.shape\n",
@@ -178,10 +297,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "82ee9f36-c393-4ca7-8e0d-a2ea5b2aea0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8.]\n",
+      " [9.]\n",
+      " [8.]\n",
+      " [8.]\n",
+      " [9.]\n",
+      " [9.]]\n",
+      "[9.]\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.random.randint(0, 10, (6, 8))\n",
     "max_ = cle.maximum_x_projection(array)\n",
@@ -193,30 +326,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9e240c69-181d-45ba-81c3-3b10f2336b13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1,) (3,) (4, 3) 2\n",
+      "0\n",
+      "2\n",
+      "4 2 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2670314/2952837383.py:20: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  z_coord = int(z_pos[y_coord,x_coord])\n"
+     ]
+    }
+   ],
    "source": [
     "array3d = np.random.randint(0, 10, (6, 4, 3))\n",
     "array3d[4, 2, 0] = 10\n",
     "\n",
-    "temp = cle.maximum_x_projection(array3d)\n",
-    "x_pos = cle.x_position_of_maximum_x_projection(array3d)\n",
+    "temp = cle.maximum_z_projection(array3d)\n",
+    "z_pos = cle.z_position_of_maximum_z_projection(array3d)\n",
     "source = temp\n",
     "\n",
     "temp = cle.maximum_y_projection(source)\n",
     "y_pos = cle.y_position_of_maximum_y_projection(source)\n",
     "source = temp\n",
     "\n",
-    "z_pos = cle.x_position_of_maximum_x_projection(source)\n",
+    "x_pos = cle.x_position_of_maximum_x_projection(source)\n",
     "\n",
-    "z_coord = int(z_pos[0][0])\n",
-    "y_coord = int(y_pos[0][z_coord])\n",
-    "x_coord = int(x_pos[y_coord][z_coord])\n",
+    "print(x_pos.shape, y_pos.shape, z_pos.shape, z_pos.ndim)\n",
+    "\n",
+    "x_coord = int(x_pos[0][0])\n",
+    "print(x_coord)\n",
+    "y_coord = int(y_pos[0][x_coord])\n",
+    "print(y_coord)\n",
+    "z_coord = int(z_pos[y_coord,x_coord])\n",
     "\n",
     "print(z_coord, y_coord, x_coord)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32f5f2be-c4b2-4c34-beff-d256dec83659",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
