test with dtype float

--- a/benchmarking/top_hat.ipynb
+++ b/benchmarking/top_hat.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "<NVIDIA GeForce RTX 3050 Ti Laptop GPU on Platform: NVIDIA CUDA (1 refs)>"
+       "<NVIDIA GeForce RTX 4090 on Platform: NVIDIA CUDA (1 refs)>"
       ]
      },
      "execution_count": 1,
@@ -52,11 +52,11 @@
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 3050 Ti Laptop GPU (OpenCL 3.0 CUDA)\n",
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
        "\tType: GPU\n",
-       "\tCompute Units: 20\n",
-       "\tGlobal Memory Size: 4294 MB\n",
-       "\tMaximum Object Size: 1073 MB"
+       "\tCompute Units: 128\n",
+       "\tGlobal Memory Size: 25358 MB\n",
+       "\tMaximum Object Size: 6339 MB"
       ]
      },
      "execution_count": 2,
@@ -78,8 +78,8 @@
    "outputs": [],
    "source": [
     "radius = 10\n",
-    "disk_kernel = morphology.cube(radius)\n",
-    "square_kernel = morphology.ball(radius)"
+    "disk_kernel = morphology.ball(radius)\n",
+    "square_kernel = morphology.cube(radius)"
    ]
   },
   {
@@ -105,11 +105,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto_prototype top-hat-shere duration: 0.7882978916168213\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.6845459938049316\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.6968636512756348\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.7028279304504395\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.7037627696990967\n"
+      "pyclesperanto_prototype top-hat-shere duration: 0.07216572761535645\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.06630992889404297\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.0659325122833252\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.06356620788574219\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.06781673431396484\n"
      ]
     }
    ],
@@ -136,11 +136,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto top-hat-shere duration: 0.7257959842681885\n",
-      "pyclesperanto top-hat-shere duration: 0.7705111503601074\n",
-      "pyclesperanto top-hat-shere duration: 0.7923500537872314\n",
-      "pyclesperanto top-hat-shere duration: 0.7839434146881104\n",
-      "pyclesperanto top-hat-shere duration: 0.8082761764526367\n"
+      "pyclesperanto top-hat-shere duration: 0.06919169425964355\n",
+      "pyclesperanto top-hat-shere duration: 0.06446290016174316\n",
+      "pyclesperanto top-hat-shere duration: 0.06555461883544922\n",
+      "pyclesperanto top-hat-shere duration: 0.06267595291137695\n",
+      "pyclesperanto top-hat-shere duration: 0.06412076950073242\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
     "\n",
     "for i in range(0, 5):\n",
     "    start_time = time.time()\n",
-    "    result_image = pcle.top_hat_sphere(test_image_gpu, result_image, radius_x=radius, radius_y=radius)\n",
+    "    result_image = pcle.top_hat(test_image_gpu, result_image, radius_x=radius, radius_y=radius, connectivity=\"sphere\")\n",
     "    print(\"pyclesperanto top-hat-shere duration: \" + str(time.time() - start_time))"
    ]
   },
@@ -165,11 +165,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto_prototype top-hat-box duration: 0.12350010871887207\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.10972404479980469\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.12705731391906738\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.12716078758239746\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.11434435844421387\n"
+      "pyclesperanto_prototype top-hat-box duration: 0.02030634880065918\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.02023458480834961\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.02082657814025879\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.020810842514038086\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.02071523666381836\n"
      ]
     }
    ],
@@ -196,11 +196,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto top-hat-box duration: 0.07483768463134766\n",
-      "pyclesperanto top-hat-box duration: 0.0700376033782959\n",
-      "pyclesperanto top-hat-box duration: 0.06687235832214355\n",
-      "pyclesperanto top-hat-box duration: 0.06766104698181152\n",
-      "pyclesperanto top-hat-box duration: 0.06505084037780762\n"
+      "pyclesperanto top-hat-box duration: 0.01052713394165039\n",
+      "pyclesperanto top-hat-box duration: 0.009463071823120117\n",
+      "pyclesperanto top-hat-box duration: 0.009361982345581055\n",
+      "pyclesperanto top-hat-box duration: 0.009383201599121094\n",
+      "pyclesperanto top-hat-box duration: 0.010474681854248047\n"
      ]
     }
    ],
@@ -212,13 +212,13 @@
     "\n",
     "for i in range(0, 5):\n",
     "    start_time = time.time()\n",
-    "    result_image = pcle.top_hat_box(test_image_gpu, result_image, radius_x=radius, radius_y=radius)\n",
+    "    result_image = pcle.top_hat(test_image_gpu, result_image, radius_x=radius, radius_y=radius, connectivity=\"box\")\n",
     "    print(\"pyclesperanto top-hat-box duration: \" + str(time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -227,9 +227,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "skimage top-hat disk duration: 10.84842848777771\n",
-      "skimage top-hat disk duration: 10.608829975128174\n",
-      "skimage top-hat disk duration: 10.623921155929565\n"
+      "skimage top-hat disk duration: 227.64173436164856\n",
+      "skimage top-hat disk duration: 226.5375473499298\n",
+      "skimage top-hat disk duration: 226.06916117668152\n",
+      "skimage top-hat disk duration: 224.93067979812622\n",
+      "skimage top-hat disk duration: 224.46945238113403\n"
      ]
     }
    ],
@@ -245,19 +247,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skimage top-hat square duration: 1.3502135276794434\n",
+      "skimage top-hat square duration: 1.3517491817474365\n",
+      "skimage top-hat square duration: 1.373570442199707\n",
+      "skimage top-hat square duration: 1.3558220863342285\n",
+      "skimage top-hat square duration: 1.373267412185669\n"
+     ]
+    }
+   ],
    "source": [
-    "# top-hat (square) with scikit-image\n",
+    "# top-hat (square) with scikit-image`\n",
     "result_image = None\n",
     "\n",
     "for i in range(0, 5):\n",
     "    start_time = time.time()\n",
     "    result_image = morphology.white_tophat(test_image, footprint=square_kernel)\n",
     "    print(\"skimage top-hat square duration: \" + str(time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impact of `dtype` on speed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_image = np.random.random([50, 1024, 1024]).astype(np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyclesperanto_prototype top-hat-box duration: 0.01829671859741211\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.020997285842895508\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.020043611526489258\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.019987821578979492\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.020021915435791016\n"
+     ]
+    }
+   ],
+   "source": [
+    "# top-hat (square) using prototype\n",
+    "result_image = None\n",
+    "\n",
+    "test_image_gpu = cle.push(test_image)\n",
+    "\n",
+    "for i in range(0, 5):\n",
+    "    start_time = time.time()\n",
+    "    result_image = cle.top_hat_box(test_image_gpu, result_image, radius_x=radius, radius_y=radius)\n",
+    "    print(\"pyclesperanto_prototype top-hat-box duration: \" + str(time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyclesperanto top-hat-box duration: 0.017570018768310547\n",
+      "pyclesperanto top-hat-box duration: 0.018915653228759766\n",
+      "pyclesperanto top-hat-box duration: 0.019094467163085938\n",
+      "pyclesperanto top-hat-box duration: 0.017920494079589844\n",
+      "pyclesperanto top-hat-box duration: 0.017951011657714844\n"
+     ]
+    }
+   ],
+   "source": [
+    "# top-hat (square) using pyclesperanto\n",
+    "result_image = None\n",
+    "\n",
+    "test_image_gpu = pcle.push(test_image)\n",
+    "\n",
+    "for i in range(0, 5):\n",
+    "    start_time = time.time()\n",
+    "    result_image = pcle.top_hat(test_image_gpu, result_image, radius_x=radius, radius_y=radius, connectivity=\"box\")\n",
+    "    print(\"pyclesperanto top-hat-box duration: \" + str(time.time() - start_time))"
    ]
   },
   {
@@ -284,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
