--- a/docs/source/api_differences.ipynb
+++ b/docs/source/api_differences.ipynb
@@ -9,10 +9,10 @@
             "source": [
                 "# Comparison pyClesperanto V.S. Prototype\n",
                 "\n",
-                "Basic exploration of the API function in `pyclesperanto` and `prototype`.\n",
-                "We list here the differences between the two version package of pyclesperanto and list the function that are present, shared, or absente.\n",
+                "This is a basic exploration of the API function in `pyclesperanto` and `prototype`. We have automatically listed the differences between the two package of pyclesperanto.\n",
                 "\n",
-                "We are basing the exploration on the functions name and place in the package. Some function may be noted as `absent` while simply behing renamed or moved to a different `tier`."
+                "This is a crude comparison based on function name and localisation in the package. \n",
+                "Indeed, some function may simply been renamed or moved to another tier. We encourage to rely on the search function to find specific operation, or to refere to the `migration` section of the documentation focussing on the main API modification between the two. "
             ]
         },
         {
@@ -994,7 +994,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.2"
+            "version": "3.1.-1"
         }
     },
     "nbformat": 4,
