--- a/docs/source/api_differences.ipynb
+++ b/docs/source/api_differences.ipynb
@@ -7,7 +7,7 @@
                 "tags": []
             },
             "source": [
-                "# Comparison pyClesperanto V.S. Prototype\n",
+                "# API pyClesperanto V.S. Prototype\n",
                 "\n",
                 "This is a basic exploration of the API function in `pyclesperanto` and `prototype`. We have automatically listed the differences between the two package of pyclesperanto.\n",
                 "\n",
